Fixed Exocet causing scrollbar.

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -27,6 +27,7 @@ body
     color: black
   font:
     family: helvetica
+  overflow: hidden
 
 @import overlay
 @import background
